Quorum3/Library/Tests/TypeCheckerGenerated/Fail/ImpAssignObject.quorum
class Main
    action Main
        Object v
        Test(v)
    end

    action Test(undefined var)
    end
end
